part1/1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mix-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mix
  template:
    metadata:
      labels:
        app: mix
    spec:
      volumes:
        - name: shared-mix
          persistentVolumeClaim:
            claimName: mix-claim
      containers:
        - name: mix-pingpong
          image: mobporo/pingpong:mix3
          volumeMounts:
          - name: shared-mix
            mountPath: /usr/src/app/files
        - name: mix-logoutput
          image: mobporo/logoutput:mix3
          volumeMounts:
          - name: shared-mix
            mountPath: /usr/src/app/files
